[gd_scene load_steps=5 format=3 uid="uid://rpkwdafwypud"]

[ext_resource type="Texture2D" uid="uid://30w6hbufxrdt" path="res://sprites/fishes/fishTile_078.png" id="1_251jc"]
[ext_resource type="Script" path="res://code/fish_nado.gd" id="1_ucco1"]

[sub_resource type="CircleShape2D" id="CircleShape2D_6ggvd"]
radius = 79.1012

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_rmvyb"]
particles_animation = true
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[node name="FishNado" type="Area2D"]
collision_layer = 4
collision_mask = 2
script = ExtResource("1_ucco1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_6ggvd")

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
material = SubResource("CanvasItemMaterial_rmvyb")
amount = 30
texture = ExtResource("1_251jc")
emission_shape = 1
emission_sphere_radius = 71.76
gravity = Vector2(0, 0)
orbit_velocity_min = -1.0
orbit_velocity_max = -1.0
scale_amount_min = 0.25
scale_amount_max = 0.5
anim_speed_min = 1.0
anim_speed_max = 1.0

[node name="Screen Visibility" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(1.90735e-06, 0.5)
scale = Vector2(5.7, 5.45)

[connection signal="body_entered" from="." to="." method="_on_player_body_entered"]
[connection signal="screen_entered" from="Screen Visibility" to="." method="_on_screen_visibility_screen_entered"]
[connection signal="screen_exited" from="Screen Visibility" to="." method="_on_screen_visibility_screen_exited"]
